# syuka-ops

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.slack  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/exports/: manual_transcripts_latest5_20260326.csv
docs/: 2026-04-26_BACKFILL_NOTE.md  GITHUB_SETUP.md  MAC_WINDOWS_SWITCHING.md  MULTICHANNEL_HANDOFF.md  MULTICHANNEL_PHASE1_PLAN.md  MULTICHANNEL_RUNBOOK.md  README_MULTICHANNEL_ADDENDUM.md  REPO_CHECKLIST.md  SLACK_INFO_TAB_COPY.md  WINDOWS_WSL2_DOCKER_PLAN.md  windows-beta-deploy.md
ops/macos/: check_launch_agents.sh  com.syuka.changgo.company.plist  com.syuka.changgo.workspace.plist  com.syuka.ops.incremental.plist  run_company_slack_bot.sh  run_daily_update.sh  run_generate_analysis.sh  run_incremental.sh  run_workspace_slack_bot.sh
ops/windows/: register_collector_tasks.ps1  retry_failed.bat  run_full_batch.bat  run_incremental.bat  unregister_collector_tasks.ps1
src/syuka_ops/: __init__.py  ad_utils.py  analysis_pipeline.py  audit.py  batch_registry.py  cli.py  collector.py  config.py  db.py  diagnostics.py  import_legacy_meta.py  import_legacy_script.py  report.py  scheduler.py  script_catalog.py  slack_bot.py  subtitle_utils.py  text_utils.py
tests/: test_ad_utils.py  test_analysis_pipeline.py  test_collector.py  test_import_legacy_script.py  test_slack_bot.py  test_subtitle_utils.py
tools/: repair_auto_transcripts.py  suspicious_analysis_ids.py
